--- a/MVCApp/MVCApp/Web.config
+++ b/MVCApp/MVCApp/Web.config
@@ -4,6 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
+  <connectionStrings>
+    <add name="userEntities"
+      connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Users;Integrated Security=True;Pooling=False"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
