--- a/MVCApp/MVCApp/Web.config
+++ b/MVCApp/MVCApp/Web.config
@@ -6,8 +6,9 @@
 <configuration>
 
   <connectionStrings>
-    <add name="userEntities"
-      connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Users;Integrated Security=True;Pooling=False"
+    <add name="userEntities" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=F:\Programs\SCRepo.git\trunk\MVCApp\MVCApp\App_Data\Users.mdf;Integrated Security=True;User Instance=True"
+      providerName="System.Data.SqlClient" />
+    <add name="usersConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\users.mdf;Integrated Security=True;User Instance=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   
