--- a/MVCApp/MVCApp/MVCApp.csproj
+++ b/MVCApp/MVCApp/MVCApp.csproj
@@ -105,6 +105,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\Commands\ICommand.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\Filters\Filters.cs" />
     <Compile Include="DomainModel\database.cs">
